# PAOO-tema3

./: CMakeLists.txt
inc/: book.h  libraryitem.h
src/: book.cpp  libraryitem.cpp  main.cpp
